[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/ItemPlace.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.4, 0.4, 0.4 )

[node name="RemoteTransform" type="RemoteTransform" groups=[
"places",
]]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]
input_capture_on_drag = true
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
